Switch from pyload to pyload-ng

--- a/ansible/install_applications/roles/download_pyload_deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download_pyload_deploy/app/deploy/ingress.yaml.j2
@@ -9,14 +9,14 @@ metadata:
   annotations:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Download
-    gethomepage.dev/name: PyLoad
+    gethomepage.dev/name: PyLoad-NG
     gethomepage.dev/description: HTTP download manager
     gethomepage.dev/icon: pyload
     gethomepage.dev/pod-selector: "app.kubernetes.io/name=pyload"
 {% if homepage.config.pyload.enabled %}
     # https://gethomepage.dev/en/services/pyload/
     gethomepage.dev/widget.type: "pyload"
-    gethomepage.dev/widget.url: "http://pyload.download-pyload.svc.cluster.local:80"
+    gethomepage.dev/widget.url: "http://pyload.download-pyload.svc.cluster.local:8000{{ pyload.context_root }}"
     gethomepage.dev/widget.fields: '["speed", "active", "queue", "total"]'
     gethomepage.dev/widget.username: "{{ homepage.config.pyload.username }}"
     gethomepage.dev/widget.password: "{{ homepage.config.pyload.password }}"
@@ -37,4 +37,4 @@ spec:
           service:
             name: pyload
             port:
-              number: 80
+              number: 8000
