--- a/ansible/install_infra/roles/nginx/templates/sites.j2
+++ b/ansible/install_infra/roles/nginx/templates/sites.j2
@@ -12,7 +12,7 @@ server {
 	error_log /var/log/nginx/{{ item.name }}_error.log;	
 	
 	{% if item.force_http_to_https | default(False) %}
-	location / { rewrite ^ https://$server_name$request_uri? permanent; }
+	location / { rewrite ^ https://$host$request_uri? permanent; }
 	{% else %}
 	index index.html index.htm index.nginx-debian.html;
 
