--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -868,11 +868,10 @@ watchers:
     image: {{ _olivetin_var_loader.base_image.name }}
     tag: {{ _olivetin_var_loader.base_image.tag }}
     includes:
-      - 20[0-9][0-9]-[0-9][0-9]-[0-9][0-9]-amd64
+      - 20[0-9][0-9]\.[0-9][0-9]\.[0-9][0-9]-amd64
     excludes:
-      - ^202[0-1].*
-      - ^2022-0[0-9].*
-      - ^2022-1[0].*
+      - ^202[0-2].*
+      - ^2023-0[0-1].*
   - name: Syncthing
     type: docker_registry
     repo: {{ _syncthing_var_loader.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
