--- a/ansible/install_applications/roles/infra_crowdsec_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra_crowdsec_deploy/app/deploy/networkPolicies.yaml.j2
@@ -15,7 +15,7 @@ spec:
 
   ingress:
     - ports:
-        - port: http
+        - port: lapi
       from:
         # Allow from agents
         - podSelector:
