--- a/ansible/install_applications/roles/infra_crowdsec_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra_crowdsec_deploy/app/deploy/networkPolicies.yaml.j2
@@ -21,6 +21,11 @@ spec:
         - podSelector:
             matchLabels:
               {{ crowdsec_agent.labels_def | to_nice_yaml() | indent(14) }}
+
+    # Allow from everywhere (required for external calls like bouncers installed on hosts)
+    - ports:
+        - port: lapi
+
     - ports:
         - port: metrics
       from:
