Fix kubernetes_syncthing_lb_ip variable name

--- a/ansible/install_applications/roles/tool_syncthing_deploy/app/deploy/syncthing-service-sync.yaml.j2
+++ b/ansible/install_applications/roles/tool_syncthing_deploy/app/deploy/syncthing-service-sync.yaml.j2
@@ -10,7 +10,7 @@ metadata:
     metallb.universe.tf/allow-shared-ip: syncthing-sync
 spec:
   type: LoadBalancer
-  loadBalancerIP: {{ kubernetes_syncthing_ip }}
+  loadBalancerIP: {{ kubernetes_syncthing_lb_ip }}
   externalTrafficPolicy: Local
   ports:
     - name: transfer-udp
@@ -38,7 +38,7 @@ metadata:
     metallb.universe.tf/allow-shared-ip: syncthing-sync
 spec:
   type: LoadBalancer
-  loadBalancerIP: {{ kubernetes_syncthing_ip }}
+  loadBalancerIP: {{ kubernetes_syncthing_lb_ip }}
   externalTrafficPolicy: Local
   ports:
     - name: transfer-tcp
