--- a/ansible/install_applications/roles/infra_crowdsec_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra_crowdsec_deploy/app/deploy/networkPolicies.yaml.j2
@@ -36,3 +36,32 @@ spec:
           podSelector:
             matchLabels:
               {{ prometheus.labels_def | to_nice_yaml() | indent(14) }}
+
+---
+
+kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: allow-to-crowdsec-agent
+  namespace: {{ crowdsec.namespace }}
+  labels:
+    {{ crowdsec_agent.labels_def | to_nice_yaml() | indent(4) }}
+    {{ crowdsec_agent.labels_desc | to_nice_yaml() | indent(4) }}
+spec:
+  types: [Ingress]
+
+  podSelector:
+    matchLabels:
+      {{ crowdsec_agent.labels_def | to_nice_yaml() | indent(6) }}
+
+  ingress:
+    - ports:
+        - port: metrics
+      from:
+        # Allow from prometheus
+        - namespaceSelector:
+            matchLabels:
+              name: {{ prometheus.namespace }}
+          podSelector:
+            matchLabels:
+              {{ prometheus.labels_def | to_nice_yaml() | indent(14) }}
