Add labels on metrics

--- a/ansible/install_applications/roles/infra_crowdsec_deploy/app/deploy/agent-metrics-service.yaml.j2
+++ b/ansible/install_applications/roles/infra_crowdsec_deploy/app/deploy/agent-metrics-service.yaml.j2
@@ -6,6 +6,7 @@ metadata:
   labels:
     {{ crowdsec_agent.labels_def | to_nice_yaml() | indent(4) }}
     {{ crowdsec_agent.labels_desc | to_nice_yaml() | indent(4) }}
+    crowdsec-role: agent
     prometheus-target: crowdsec-agent
 spec:
   ports:
