--- a/ansible/install_applications/roles/monitoring_crowdsec_external_deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_crowdsec_external_deploy/app/deploy/service.yaml.j2
@@ -6,6 +6,7 @@ metadata:
   namespace: {{ crowdsec_external.namespace }}
   labels:
     {{ crowdsec_external.labels_def | to_nice_yaml() | indent(4) }}
+    crowdsec-role: {{ target.role }}
     prometheus-target: crowdsec-external
 spec:
   ports:
