--- a/ansible/install_applications/roles/infra_crowdsec_deploy/app/deploy/lapi-metrics-service.yaml.j2
+++ b/ansible/install_applications/roles/infra_crowdsec_deploy/app/deploy/lapi-metrics-service.yaml.j2
@@ -6,6 +6,7 @@ metadata:
   labels:
     {{ crowdsec_lapi.labels_def | to_nice_yaml() | indent(4) }}
     {{ crowdsec_lapi.labels_desc | to_nice_yaml() | indent(4) }}
+    crowdsec-role: lapi
     prometheus-target: crowdsec-lapi
 spec:
   ports:
