--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/crowdsec-external.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/crowdsec-external.yaml.j2
@@ -10,6 +10,8 @@ spec:
   - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     port: metrics
     path: /metrics
+  targetLabels:
+    - crowdsec-role
   namespaceSelector:
     matchNames:
     - {{ crowdsec_external.namespace }}
