--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/crowdsec.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/crowdsec.yaml.j2
@@ -11,6 +11,8 @@ spec:
   - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     port: metrics
     path: /metrics
+  targetLabels:
+    - crowdsec-role
   namespaceSelector:
     matchNames:
     - {{ crowdsec.namespace }}
@@ -33,6 +35,14 @@ spec:
   - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     port: metrics
     path: /metrics
+    relabelings:
+    # Crowdsec dashboards use a "machine" label, populate it with the node name for agents
+    - action: replace
+      sourceLabels:
+      - __meta_kubernetes_pod_node_name
+      targetLabel: machine
+  targetLabels:
+    - crowdsec-role
   namespaceSelector:
     matchNames:
     - {{ crowdsec.namespace }}
