--- a/ansible/install_applications/roles/logging_elasticsearch_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/logging_elasticsearch_deploy/app/deploy/networkPolicies.yaml.j2
@@ -46,6 +46,14 @@ spec:
             matchLabels:
               {{ fluentd.labels_def | to_nice_yaml() | indent(14) }}
 
+        # Allow from crowdsec LAPI
+        - namespaceSelector:
+            matchLabels:
+              name: {{ crowdsec.namespace }}
+          podSelector:
+            matchLabels:
+              {{ crowdsec_lapi.labels_def | to_nice_yaml() | indent(14) }}
+
     # Allow from elasticsearch nodes
     - ports:
         - port: inter-node
