Allow grafana to read crowdsec es index

--- a/ansible/install_applications/roles/logging_elasticsearch_deploy/app/config/security/roles_mapping.yml.j2
+++ b/ansible/install_applications/roles/logging_elasticsearch_deploy/app/config/security/roles_mapping.yml.j2
@@ -58,6 +58,11 @@ crowdsec:
   backend_roles:
   - "crowdsec"
 
+grafana:
+  reserved: true
+  backend_roles:
+  - "grafana"
+
 ## Additional roles
 
 {% for role_mapping in elasticsearch_role_mappings | default([]) %}
