--- a/ansible/install_applications/roles/logging_elasticsearch_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/logging_elasticsearch_deploy/app/deploy/networkPolicies.yaml.j2
@@ -54,6 +54,14 @@ spec:
             matchLabels:
               {{ crowdsec_lapi.labels_def | to_nice_yaml() | indent(14) }}
 
+        # Allow from grafana
+        - namespaceSelector:
+            matchLabels:
+              name: {{ grafana.namespace }}
+          podSelector:
+            matchLabels:
+              {{ grafana.labels_def | to_nice_yaml() | indent(14) }}
+
     # Allow from elasticsearch nodes
     - ports:
         - port: inter-node
