Use a daily crowdsec index

--- a/ansible/install_applications/roles/infra_crowdsec_deploy/app/config/notifications/elasticsearch.yaml.j2
+++ b/ansible/install_applications/roles/infra_crowdsec_deploy/app/config/notifications/elasticsearch.yaml.j2
@@ -8,7 +8,7 @@ log_level: debug # Options include: trace, debug, info, warn, error, off
 {% raw %}
 format: |-
  {{ range .}}
-  {"index": { "_index": "crowdsec"} }
+  {"index": { "_index": "crowdsec-{{ substr 0 10 .StartAt }}"} }
   {{.|toJson}}
  {{ end }}
 {% endraw %}
