--- a/ansible/install_applications/roles/monitoring_grafana_deploy/app/config/datasources/crowdsec_elasticsearch.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_grafana_deploy/app/config/datasources/crowdsec_elasticsearch.yaml.j2
@@ -2,6 +2,7 @@ apiVersion: 1
 datasources:
   - name: Crowdsec (Elasticsearch)
     type: elasticsearch
+    uid: crowdsec-elasticsearch
     access: proxy
     database: '[crowdsec-]YYYY-MM-DD'
     url: https://{{ elasticsearch.servername }}:9200
