--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -718,8 +718,9 @@ watchers:
       - ^[0-9]+.[0-9]+.[0-9]+-distroless$
     excludes:
       - ^1\..*
-      - ^2.0.[0-9]$
-      - ^2.0.[0-3][0-9]$
+      - ^2.0.[0-9]-distroless$
+      - ^2.0.[0-3][0-9]-distroless$
+      - ^2.0.4[0-2]-distroless$
   - name: Miniflux PostgreSQL
     type: docker_registry
     repo: {{ miniflux_pgsql.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
