--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/kubelet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/kubelet.yaml.j2
@@ -52,7 +52,8 @@ spec:
       - __name__
     port: https-metrics
     relabelings:
-    - sourceLabels:
+    - action: replace
+      sourceLabels:
       - __metrics_path__
       targetLabel: metrics_path
     scheme: https
@@ -81,7 +82,8 @@ spec:
     path: /metrics/cadvisor
     port: https-metrics
     relabelings:
-    - sourceLabels:
+    - action: replace
+      sourceLabels:
       - __metrics_path__
       targetLabel: metrics_path
     scheme: https
@@ -93,7 +95,8 @@ spec:
     path: /metrics/probes
     port: https-metrics
     relabelings:
-    - sourceLabels:
+    - action: replace
+      sourceLabels:
       - __metrics_path__
       targetLabel: metrics_path
     scheme: https
