--- a/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/networkPolicies.yaml.j2
@@ -57,3 +57,7 @@ spec:
           podSelector:
             matchLabels:
               {{ prometheus.labels_def | to_nice_yaml() | indent(14) }}
+        # Allow from argo workflows tasks
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: dev-argo-workflows-tasks
