--- a/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/docker_auth.json.j2
+++ b/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/docker_auth.json.j2
@@ -2,6 +2,9 @@
 	"auths": {
 		"{{ docker_private_registry.domain }}": {
 			"auth": "{{ (docker_private_registry.username + ':' + docker_private_registry.password) | b64encode }}"
+		},
+		"docker-registry.infra-docker-registry.svc.cluster.local": {
+			"auth": "{{ (docker_private_registry.username + ':' + docker_private_registry.password) | b64encode }}"
 		}
 	}
 }
