Support a list of custom openssl certs secrets

--- a/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/cluster-ca-secret.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/cluster-ca-secret.yaml.j2
@@ -6,4 +6,4 @@ metadata:
   annotations:
     reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
 data:
-  {{ cluster_ca_file.source | basename }}: {{ cluster_ca_file.content }}
+  ca.crt: {{ lookup('ansible.builtin.file', custom_ssl_pki_generation_root_dir + '/cluster/ca.crt') | b64encode }}
