--- a/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/networkPolicies.yaml.j2
@@ -60,7 +60,7 @@ spec:
         # Allow from argo workflows tasks
         - namespaceSelector:
             matchLabels:
-              kubernetes.io/metadata.name: dev-argo-workflows-tasks
+              kubernetes.io/metadata.name: dev-argo-tasks
         # Allow from argo cd
         - namespaceSelector:
             matchLabels:
