Replace cluster-reflector by cluster-kubernetes-replicator

--- a/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/cluster-ca-secret.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/cluster-ca-secret.yaml.j2
@@ -4,6 +4,6 @@ metadata:
   name: cluster-ca
   namespace: cluster-secrets
   annotations:
-    reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+    replicator.v1.mittwald.de/replicate-to: ".*"
 data:
   ca.crt: {{ lookup('ansible.builtin.file', custom_ssl_pki_generation_root_dir + '/cluster/ca.crt') | b64encode }}
