--- a/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/opensslpki-tls-secrets.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/opensslpki-tls-secrets.yaml.j2
@@ -4,8 +4,13 @@ metadata:
   name: opensslpki-{{ item.secret_name }}-tls
   namespace: cluster-secrets
   annotations:
-    reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
-    reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "{{ item.allowed_full_namespaces | join(',') }}"
+{% if item.kubernetes_replicator.push_full_to_namespaces | default([]) | length > 0 %}
+    replicator.v1.mittwald.de/replicate-to: "{{ item.kubernetes_replicator.push_full_to_namespaces | join(',') }}"
+{% endif %}
+{% if item.kubernetes_replicator.pull_full_namespaces | default([]) | length > 0 %}
+    replicator.v1.mittwald.de/replication-allowed: "true"
+    replicator.v1.mittwald.de/replication-allowed-namespaces: "{{ item.kubernetes_replicator.pull_full_namespaces | join(',') }}"
+{% endif %}
 type: kubernetes.io/tls
 data:
   ca.crt: {{ lookup('ansible.builtin.file', item.ca_path) | b64encode }}
@@ -20,8 +25,13 @@ metadata:
   name: opensslpki-{{ item.secret_name }}-cert
   namespace: cluster-secrets
   annotations:
-    reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
-    reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "{{ item.allowed_cert_namespaces | join(',') }}"
+{% if item.kubernetes_replicator.push_cert_to_namespaces | default([]) | length > 0 %}
+    replicator.v1.mittwald.de/replicate-to: "{{ item.kubernetes_replicator.push_cert_to_namespaces | join(',') }}"
+{% endif %}
+{% if item.kubernetes_replicator.pull_cert_namespaces | default([]) | length > 0 %}
+    replicator.v1.mittwald.de/replication-allowed: "true"
+    replicator.v1.mittwald.de/replication-allowed-namespaces: "{{ item.kubernetes_replicator.pull_cert_namespaces | join(',') }}"
+{% endif %}
 data:
   ca.crt: {{ lookup('ansible.builtin.file', item.ca_path) | b64encode }}
   tls.crt: {{ lookup('ansible.builtin.file', item.cert_path) | b64encode }}
