--- a/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/registry-secret.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/registry-secret.yaml.j2
@@ -5,6 +5,6 @@ metadata:
   name: docker-config
   namespace: cluster-secrets
   annotations:
-    reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+    replicator.v1.mittwald.de/replicate-to: ".*"
 data:
   .dockerconfigjson: {{ lookup('template', 'docker_auth.json.j2', convert_data=False) | b64encode }}
