Improve opensslpki secret configuration

--- a/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/opensslpki-tls-secrets.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/opensslpki-tls-secrets.yaml.j2
@@ -13,9 +13,9 @@ metadata:
 {% endif %}
 type: kubernetes.io/tls
 data:
-  ca.crt: {{ lookup('ansible.builtin.file', item.ca_path) | b64encode }}
-  tls.crt: {{ lookup('ansible.builtin.file', item.cert_path) | b64encode }}
-  tls.key: {{ lookup('ansible.builtin.file', item.key_path) | b64encode }}
+  ca.crt: {{ lookup('ansible.builtin.file', custom_ssl_pki_generation_root_dir + '/' + item.pki_name + '/ca.crt') | b64encode }}
+  tls.crt: {{ lookup('ansible.builtin.file', custom_ssl_pki_generation_root_dir + '/' + item.pki_name + '/' + item.cert_name + '/server.crt') | b64encode }}
+  tls.key: {{ lookup('ansible.builtin.file', custom_ssl_pki_generation_root_dir + '/' + item.pki_name + '/' + item.cert_name + '/server.key') | b64encode }}
 
 ---
 
@@ -33,5 +33,5 @@ metadata:
     replicator.v1.mittwald.de/replication-allowed-namespaces: "{{ item.kubernetes_replicator.pull_cert_namespaces | join(',') }}"
 {% endif %}
 data:
-  ca.crt: {{ lookup('ansible.builtin.file', item.ca_path) | b64encode }}
-  tls.crt: {{ lookup('ansible.builtin.file', item.cert_path) | b64encode }}
+  ca.crt: {{ lookup('ansible.builtin.file', custom_ssl_pki_generation_root_dir + '/' + item.pki_name + '/ca.crt') | b64encode }}
+  tls.crt: {{ lookup('ansible.builtin.file', custom_ssl_pki_generation_root_dir + '/' + item.pki_name + '/' + item.cert_name + '/server.crt') | b64encode }}
