Add support for dhparam.pem in opensslpki secrets

--- a/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/opensslpki-tls-secrets.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/opensslpki-tls-secrets.yaml.j2
@@ -16,6 +16,9 @@ data:
   ca.crt: {{ lookup('ansible.builtin.file', custom_ssl_pki_generation_root_dir + '/' + item.pki_name + '/ca.crt') | b64encode }}
   tls.crt: {{ lookup('ansible.builtin.file', custom_ssl_pki_generation_root_dir + '/' + item.pki_name + '/' + item.cert_name + '/server.crt') | b64encode }}
   tls.key: {{ lookup('ansible.builtin.file', custom_ssl_pki_generation_root_dir + '/' + item.pki_name + '/' + item.cert_name + '/server.key') | b64encode }}
+{% if item.include_dhparam | default(false) %}
+  dhparam.pem: {{ lookup('ansible.builtin.file', custom_ssl_pki_generation_root_dir + '/' + item.pki_name + '/' + item.cert_name + '/dhparam.pem') | b64encode }}
+{% endif %}
 
 ---
 
