--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -75,9 +75,9 @@ watchers:
       - ^2\.0\..*
       - ^2\.1[0-5]\..*
   - type: docker_registry
-    repo: {{ openldap.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ openldap.base_image.name }}
-    tag: {{ openldap.base_image.tag }}
+    repo: "registry-1.docker.io"
+    image: "osixia/openldap"
+    tag: 1.5.0-amd64
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+-amd64"
     excludes:
