--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -84,9 +84,9 @@ watchers:
       - ^1\.[0-4]\.
   - name: phpLDAPadmin-php
     type: docker_registry
-    repo: {{ phpldapadmin.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ phpldapadmin.base_image.name }}
-    tag: {{ phpldapadmin.base_image.tag }}
+    repo: "registry-1.docker.io"
+    image: php
+    tag: 7.3.33-apache-buster
     includes:
       - "7.3.[0-9]+-apache-buster"
     excludes:
@@ -95,7 +95,7 @@ watchers:
       - "7.3.3[0-2]-apache-buster"
   - type: github_tag
     repo: leenooks/phpLDAPadmin
-    tag: {{ phpldapadmin.version }}
+    tag: 1.2.6.6
   
   ##############
   # Apps : Dev #
