--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -101,9 +101,9 @@ watchers:
   # Apps : Dev #
   ##############
   - type: docker_registry
-    repo: {{ gitea.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ gitea.base_image.name }}
-    tag: {{ gitea.base_image.tag }}
+    repo: registry-1.docker.io
+    image: gitea/gitea
+    tag: 1.19.0-rootless
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-rootless
     excludes:
@@ -112,9 +112,9 @@ watchers:
       - ^1\.1[0-8]\..*
   - name: Gitea PostgreSQL
     type: docker_registry
-    repo: {{ gitea_pgsql.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ gitea_pgsql.base_image.name }}
-    tag: {{ gitea_pgsql.base_image.tag }}
+    repo: registry-1.docker.io
+    image: library/postgres
+    tag: 15.2-alpine3.17
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
