--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -127,9 +127,9 @@ watchers:
   ###################
   - name: Deluge Baseimage
     type: docker_registry
-    repo: {{ deluge_base.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ deluge_base.base_image.name }}
-    tag: {{ deluge_base.base_image.tag }}
+    repo: registry-1.docker.io
+    image: emmercm/libtorrent
+    tag: 1.2.14-alpine
     includes:
       - 1\.[0-9]+\.[0-9]+-alpine
     excludes:
@@ -139,7 +139,7 @@ watchers:
   - name: Deluge
     type: pypi
     package: deluge
-    version: {{ deluge.version }}
+    version: 2.1.1
     excludes: 
       - ^1\..*
   - name: Pyload Baseimage
