--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -157,9 +157,9 @@ watchers:
     version: 0.5.0b3.dev68
   - name: SABnzbd Baseimage
     type: docker_registry
-    repo: {{ sabnzbd.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ sabnzbd.base_image.name }}
-    tag: {{ sabnzbd.base_image.tag }}
+    repo: registry-1.docker.io
+    image: library/python
+    tag: 3.11.2-slim-bullseye
     includes:
       - 3\.[0-9]+\.[0-9]+-slim-bullseye
     excludes:
@@ -167,14 +167,14 @@ watchers:
       - ^3\.1[0]\..*
   - name: SABnzbd
     type: github_release
-    repo: {{ sabnzbd.repo.name }}
-    release: {{ sabnzbd.repo.version }}
+    repo: sabnzbd/sabnzbd
+    release: 3.7.2
     excludes:
       - .*(RC|Alpha|Beta).*
   - name: SABnzbd nzbToMedia
     type: github_release
-    repo: {{ sabnzbd.nzbToMedia.repo.name }}
-    release: {{ sabnzbd.nzbToMedia.repo.version }}
+    repo: clinton-hall/nzbToMedia
+    release: 12.1.10
   - name: Sickchill Baseimage
     type: docker_registry
     repo: {{ sickchill.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
