--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -275,9 +275,9 @@ watchers:
       - ^2\.[0-9]\..*
       - ^2\.1[0-9]\..*
   - type: docker_registry
-    repo: {{ esphome.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ esphome.base_image.name }}
-    tag: {{ esphome.base_image.tag }}
+    repo: registry-1.docker.io
+    image: esphome/esphome
+    tag: 2023.3.2
     includes:
       - ^20[0-9]+\.[0-9]+\.[0-9]+.*$
     excludes:
