--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -306,9 +306,9 @@ watchers:
       - ^1\.[0-9]\..*
       - ^1\.[1-2][0-9]\..*
   - type: docker_registry
-    repo: {{ frigate.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ frigate.base_image.name }}
-    tag: {{ frigate.base_image.tag }}
+    repo: registry-1.docker.io
+    image: blakeblackshear/frigate
+    tag: 0.11.1
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+$
     excludes:
