--- a/ansible/install_applications/roles/home_zwavejsui_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/home_zwavejsui_deploy/app/deploy/networkPolicies.yaml.j2
@@ -31,7 +31,8 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              name: {{ homeassistant.namespace }}
+              app.kubernetes.io/name: home-homeassistant
           podSelector:
             matchLabels:
-              {{ homeassistant.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: homeassistant
+              app.kubernetes.io/component: homeassistant
