--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -195,9 +195,9 @@ watchers:
   # Apps : Home #
   ###############
   - type: docker_registry
-    repo: {{ homeassistant.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ homeassistant.base_image.name }}
-    tag: {{ homeassistant.base_image.tag }}
+    repo: registry-1.docker.io
+    image: homeassistant/home-assistant
+    tag: 2023.3.6
     includes:
       - ^[0-9][0-9][0-9][0-9]\.[0-9]+\.[0-9]+.*
     excludes:
@@ -212,9 +212,9 @@ watchers:
     commit: 819f9233116e68b5af5a5f45167bcbb4ed412ed4
   - name: "HomeAssistant MySQL"
     type: docker_registry
-    repo: {{ homeassistant_mysql.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ homeassistant_mysql.base_image.name }}
-    tag: {{ homeassistant_mysql.base_image.tag }}
+    repo: registry-1.docker.io
+    image: library/mysql
+    tag: 8.0.32-debian
     includes:
       - ^[0-9]\.[0-9]+\.[0-9]+-debian
     excludes:
