Migrate home-nodered to kustomize

--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -235,9 +235,9 @@ watchers:
       - ^2\.0\.[0-9]-openssl$
       - ^2\.0\.1[0-4]-openssl$
   - type: docker_registry
-    repo: {{ nodered.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ nodered.base_image.name }}
-    tag: {{ nodered.base_image.tag }}
+    repo: registry-1.docker.io
+    image: nodered/node-red
+    tag: 3.0.2-18-minimal
     includes:
       - '[0-9]+\.[0-9]+\.[0-9]+-[0-9]+-minimal'
     excludes:
@@ -246,19 +246,19 @@ watchers:
       - .*-1[0-6]-minimal$
   - type: github_tag
     repo: vesse/node-ldapauth-fork
-    tag: v{{ nodered.additional_modules.ldapauth_fork.version }}
+    tag: v5.0.5
     includes:
       - 'v[0-9]+\.[0-9]+\.[0-9]+'
     excludes:
       - '.*-rc.*'
   - type: github_tag
     repo: zachowj/node-red-contrib-home-assistant-websocket 
-    tag: v{{ nodered.additional_modules.node_red_contrib_home_assistant_websocket.version }}
+    tag: v0.48.1
     includes:
       - 'v[0-9]+\.[0-9]+\.[0-9]+'
   - type: github_tag
     repo: biddster/node-red-contrib-time-range-switch
-    tag: {{ nodered.additional_modules.node_red_contrib_time_range_switch.version }}
+    tag: 1.2.0
     includes:
       - '[0-9]+\.[0-9]+\.[0-9]+'
   # TODO : support NPM for nodered.additional_modules.node_red_contrib_stoptimer
