--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -286,9 +286,9 @@ watchers:
       - ^202[0-2].*
       - ^2023\.[0-2]\..*
   - type: docker_registry
-    repo: {{ zwavejsui.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ zwavejsui.base_image.name }}
-    tag: {{ zwavejsui.base_image.tag }}
+    repo: registry-1.docker.io
+    image: zwavejs/zwave-js-ui
+    tag: 8.11.1
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+.*$
     excludes:
